fixed image bottom thing with vertical-align

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,12 +45,12 @@ ul {
 
 #headshot {
     width: 100%;
+    vertical-align: top;
 }
 
 #pic {
     text-align: center;
-    width: 300px;
-    height: 200px;
+    width: 30%;
     margin: auto;
     border: 10px solid #2c3e50;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, .4)
